syntax = "proto3";

package greet;
option go_package = "./greet/greetpb";

service GreetService {
  rpc UnaryGreet(GreetRequest) returns (GreetResponse);
}

message GreetRequest {
  Greeting greeting = 1;
}

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetResponse {
  string result = 1;
}
